274x274 images WIP title size

--- a/AI_model.ipynb
+++ b/AI_model.ipynb
@@ -620,7 +620,7 @@
     "                  f\"Test accuracy: {accuracy/len(testloader):.3f}\")\n",
     "            running_loss = 0\n",
     "            model.train()\n",
-    "torch.save(model, 'aerialmodel.pth')"
+    "#torch.save(model, 'aerialmodel.pth')"
    ]
   },
   {
