224x 224 BW okay, rerun color images cache error on plot

--- a/AI_model.ipynb
+++ b/AI_model.ipynb
@@ -579,7 +579,7 @@
     }
    ],
    "source": [
-    "epochs = 1\n",
+    "epochs = 100#1\n",
     "steps = 0\n",
     "running_loss = 0\n",
     "print_every = 1#10\n",
