--- a/GOES-R_imageFD.ipynb
+++ b/GOES-R_imageFD.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "prescribed-banks",
    "metadata": {},
    "outputs": [],
@@ -282,26 +282,26 @@
     "            \n",
     "            plt.grid(None)\n",
     "            plt.axis('off')\n",
-    "            title = f'Brightness Temperature in Kelvin \\n Full Disk GOES-{SS} Image Band{bb}'\n",
-    "            ttl = plt.title(f\"{title}\\n Date {mm}-{dd}, Year {yyyy}, \\n Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
-    "                       fontsize=\"x-large\", fontweight='bold', pad = 6.0)\n",
-    "            ttl.set_position([.5, 1.05])\n",
+    "#             title = f'Brightness Temperature in Kelvin \\n Full Disk GOES-{SS} Image Band{bb}'\n",
+    "#             ttl = plt.title(f\"{title}\\n Date {mm}-{dd}, Year {yyyy}, \\n Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
+    "#                        fontsize=\"x-large\", fontweight='bold', pad = 6.0)\n",
+    "#             ttl.set_position([.5, 1.05])\n",
     "            fig1=plt.imshow(Kelvin_GOES_image,cmap='Greys',interpolation='none',vmin=180,vmax=300)\n",
-    "            cbar = plt.colorbar()\n",
-    "            cbar.ax.set_ylabel('Kelvin')\n",
+    "#             cbar = plt.colorbar()\n",
+    "#             cbar.ax.set_ylabel('Kelvin')\n",
     "            \n",
     "            if not os.path.isfile(op.join(storage,naming)):\n",
     "                plt.grid(None)\n",
     "                fig1.figure.savefig( op.join(storage,naming) )\n",
     "                \n",
-    "            cbar.remove()    \n",
-    "            title = f'Brightness Temperature in Kelvin \\n Full Disk GOES-{SS} Image Band{bb}'\n",
-    "            ttl = plt.title(f\"{title}\\n Date {mm}-{dd}, Year {yyyy}, \\n Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
-    "                       fontsize=\"x-large\", fontweight='bold', pad = 6.0)\n",
-    "            ttl.set_position([.5, 1.05])\n",
+    "#             cbar.remove()    \n",
+    "#             title = f'Brightness Temperature in Kelvin \\n Full Disk GOES-{SS} Image Band{bb}'\n",
+    "#             ttl = plt.title(f\"{title}\\n Date {mm}-{dd}, Year {yyyy}, \\n Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
+    "#                        fontsize=\"x-large\", fontweight='bold', pad = 6.0)\n",
+    "#             ttl.set_position([.5, 1.05])\n",
     "            fig1 = plt.imshow(Kelvin_GOES_image, vmin=180, vmax=300, cmap='plasma')\n",
-    "            cbar = plt.colorbar()\n",
-    "            cbar.ax.set_ylabel('Kelvin')\n",
+    "#             cbar = plt.colorbar()\n",
+    "#             cbar.ax.set_ylabel('Kelvin')\n",
     "            #plt.grid(None) #Call after the imshow, redraws\n",
     "            #plt.axis('off')#Call after the imshow, redraws; \"layer\" to previous drawing\n",
     "\n",
@@ -353,7 +353,60 @@
       "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210010610211_e20210010619524_c20210010619586.nc\n",
       "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C11_G16_s20210010120209_e20210010129517_c20210010129583.nc\n",
       "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C14_G16_s20210011810209_e20210011819517_c20210011819585.nc\n",
-      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210011110211_e20210011119519_c20210011119574.nc\n"
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210011110211_e20210011119519_c20210011119574.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C02_G16_s20210012030208_e20210012039516_c20210012039559.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C06_G16_s20210012040208_e20210012049522_c20210012049564.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C01_G16_s20210010150209_e20210010159516_c20210010159577.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C15_G16_s20210010210209_e20210010219522_c20210010219590.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C13_G16_s20210010100209_e20210010109528_c20210010110000.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210010750211_e20210010759524_c20210010759584.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C14_G16_s20210010150209_e20210010159516_c20210010159593.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C03_G16_s20210011810209_e20210011819517_c20210011819577.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C01_G16_s20210012330208_e20210012339516_c20210012339565.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C02_G16_s20210010510211_e20210010519519_c20210010519552.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210011820209_e20210011829517_c20210011829575.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C09_G16_s20210011410211_e20210011419525_c20210011419599.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C07_G16_s20210010710211_e20210010719531_c20210010719586.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C07_G16_s20210011340211_e20210011349530_c20210011349584.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C03_G16_s20210011840209_e20210011849517_c20210011849576.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C07_G16_s20210011510211_e20210011519531_c20210011519586.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C15_G16_s20210012020208_e20210012029522_c20210012029583.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210012350208_e20210012359516_c20210012359570.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210011720209_e20210011729517_c20210011729570.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C15_G16_s20210010300209_e20210010309522_c20210010309593.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C02_G16_s20210012150208_e20210012159516_c20210012159556.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C03_G16_s20210011040211_e20210011049519_c20210011049579.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C08_G16_s20210011120211_e20210011129519_c20210011129591.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210011040211_e20210011049524_c20210011049587.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C01_G16_s20210012310208_e20210012319516_c20210012319568.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210011330211_e20210011339525_c20210011339591.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210012250208_e20210012259522_c20210012259571.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C13_G16_s20210011120211_e20210011129531_c20210011130005.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C04_G16_s20210010120209_e20210010129517_c20210010129548.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C15_G16_s20210011400211_e20210011409525_c20210011409596.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C16_G16_s20210010600211_e20210010609531_c20210010609595.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C05_G16_s20210010020209_e20210010029517_c20210010029569.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C13_G16_s20210012250208_e20210012259527_c20210012259594.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C14_G16_s20210011340211_e20210011349519_c20210011350009.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C04_G16_s20210012230208_e20210012239516_c20210012239547.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C09_G16_s20210011720209_e20210011729522_c20210011729580.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C01_G16_s20210010220209_e20210010229516_c20210010229569.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210011940208_e20210011949522_c20210011949592.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C06_G16_s20210011110211_e20210011119525_c20210011119564.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C06_G16_s20210012030208_e20210012039522_c20210012039568.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C04_G16_s20210010350209_e20210010359516_c20210010359547.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C11_G16_s20210010210209_e20210010219517_c20210010219571.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C08_G16_s20210010740211_e20210010749519_c20210010749587.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C12_G16_s20210011450211_e20210011459525_c20210011459595.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C15_G16_s20210012220208_e20210012229523_c20210012229577.nc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C10_G16_s20210010840211_e20210010849530_c20210010849578.nc\n",
+      "/arcdata/goes/grb/goes16/2021/2021_01_01_001/abi/L1b/RadF/OR_ABI-L1b-RadF-M6C16_G16_s20210011950208_e20210011959528_c20210011959596.nc\n"
      ]
     }
    ],
