AI model results under 90 percent

--- a/AI_model.ipynb
+++ b/AI_model.ipynb
@@ -693,6 +693,82 @@
       "Epoch 4/100.. Train loss: 0.068.. Test loss: 0.026.. Test accuracy: 0.992\n",
       "43\n",
       "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.023.. Test loss: 0.033.. Test accuracy: 0.992\n",
+      "44\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.046.. Test loss: 0.025.. Test accuracy: 0.992\n",
+      "45\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.012.. Test loss: 0.026.. Test accuracy: 0.992\n",
+      "46\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.010.. Test loss: 0.017.. Test accuracy: 0.996\n",
+      "47\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.030.. Test loss: 0.061.. Test accuracy: 0.950\n",
+      "48\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.037.. Test loss: 0.013.. Test accuracy: 0.996\n",
+      "49\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.012.. Test loss: 0.011.. Test accuracy: 1.000\n",
+      "50\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.013.. Test loss: 0.042.. Test accuracy: 1.000\n",
+      "51\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.013.. Test loss: 0.010.. Test accuracy: 1.000\n",
+      "52\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 4/100.. Train loss: 0.020.. Test loss: 0.014.. Test accuracy: 1.000\n",
+      "53\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.009.. Test loss: 0.013.. Test accuracy: 1.000\n",
+      "54\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.013.. Test loss: 0.012.. Test accuracy: 0.996\n",
+      "55\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.015.. Test loss: 0.009.. Test accuracy: 0.996\n",
+      "56\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.006.. Test loss: 0.009.. Test accuracy: 0.996\n",
+      "57\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.017.. Test loss: 0.009.. Test accuracy: 0.996\n",
+      "58\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.018.. Test loss: 0.008.. Test accuracy: 1.000\n",
+      "59\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.011.. Test loss: 0.007.. Test accuracy: 1.000\n",
+      "60\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.009.. Test loss: 0.007.. Test accuracy: 1.000\n",
+      "61\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 5/100.. Train loss: 0.013.. Test loss: 0.007.. Test accuracy: 1.000\n",
+      "62\n",
+      "REACHED RUNNING LOSS\n",
       "I am working\n"
      ]
     }
